# grimvaders

./: .gitignore  Cargo.toml  README.md  TODO.md  build_linux.sh  generate_sprites.sh  linux_run.sh  wasm_build.sh  wasm_run.sh
assets/data/: actions.yaml  basic.yaml  items.yaml  npcs.yaml  player.yaml
assets/shaders/: disintegrate.wgsl  glow.wgsl  noise.wgsl  outline.wgsl  outline_text.wgsl  post.wgsl  scanline.wgsl
assets/sprites/: units.json
assets_dev/screenshots/: manual.ase
assets_dev/sprites/: background.aseprite  font.aseprite  icons_small.aseprite  main.aseprite  tiles.aseprite  tiles_bak.aseprite  tiles_bak_05.aseprite  ui.aseprite  units.aseprite
crates/game/: Cargo.toml
crates/game/src/: assets.rs  input.rs  lib.rs
crates/game/src/scenes/: battle.rs  deck.rs  game.rs  game_over.rs  main_menu.rs  mod.rs  shop.rs  win.rs
crates/game_data/: Cargo.toml
crates/game_data/src/: lib.rs  sprites.rs
crates/game_graphics/: Cargo.toml
crates/game_graphics/src/: globals.rs  input.rs  lib.rs  utils.rs
crates/game_graphics/src/battle/: board.rs  mod.rs  player.rs
crates/game_graphics/src/deck/: mod.rs
crates/game_graphics/src/draw/: bubbles.rs  mod.rs  sprites.rs  units.rs
crates/game_graphics/src/shop/: mod.rs
crates/game_graphics/src/ui/: button.rs  mod.rs  span.rs  text_box.rs
crates/game_logic/: Cargo.toml
crates/game_logic/src/: actions.rs  commands.rs  components.rs  events.rs  globals.rs  lib.rs  player.rs  scripting.rs  startup.rs  utils.rs  world.rs
crates/game_logic/src/battle/: board.rs  mod.rs  npcs.rs  player.rs  systems.rs  utils.rs
crates/game_logic/src/deck/: mod.rs
crates/game_logic/src/shop/: mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
docker/linux/: Dockerfile
tools/: .~lock.progress.ods#  parse_player_yaml.py  player.csv  progress.ods
wasm_assets/: index.html
