[package]
name = "game_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogalik = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
wunderkammer = { workspace = true }

