[package]
name = "game_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
rune = "0.14"
rune-modules = "0.14"
rand = { workspace = true }
rogalik = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
wunderkammer = { workspace = true }

game_data = { path = "../game_data" }
macros = { version = "0.1", path = "../macros" }

